# MLOps

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  bentofile.yaml  cloudbuild_frontend.yaml  docker-compose.yml  profile.txt  pyproject.toml  tasks.py
.github/workflows/: docs.yml  python-app.yml
cloud_functions/: main.py  model.pkl  requirements.txt  train_sklearn.py
configs/: config.yaml  config_gpu.yaml
dockerfiles/: api.dockerfile  api_gcp.dockerfile  api_onnx.dockerfile  api_onnx_gcp.dockerfile  frontend.dockerfile  frontend_light.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: DEPLOYMENT.md  PROJECT.md  api.md
lightning_logs/version_0/: events.out.tfevents.1768403090.Melina-sin-MacBook-Air.local.72623.0
lightning_logs/version_1/: events.out.tfevents.1768403280.Melina-sin-MacBook-Air.local.73165.0  hparams.yaml
reports/: README.md
scripts/: benchmark_cloud.py  export_onnx.py  test_onnx.py  test_requests.py
src/clickbait_classifier/: api.py  api_gcp.py  api_melina.py  api_onnx.py  bentoml_service.py  data.py  frontend.py  model.py  train.py  utils.py
tests/: test_api.py  test_data.py  test_model.py  test_training.py
tests/performancetests/: locustfile.py  locustfile_bentoml.py
