[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "clickbait-classifier"
version = "0.1.0"
description = "A clickbait detection classifier using transformers"
authors = [
  { name = "Julia Melina Jones Borgund" },
  { name = "Kaja Hovinbøle" },
  { name = "Poul Guo Skov" },
  { name = "Yannick Brot Christensen" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = []

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
