[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "clickbait-classifier"
version = "0.1.0"
description = "A clickbait detection classifier using transformers"
authors = [
  { name = "Julia Melina Jones Borgund" },
  { name = "Kaja Hovinbøle" },
  { name = "Poul Guo Skov" },
  { name = "Yannick Brot Christensen" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "hydra-core>=1.3.2",
    "invoke>=2.2.1",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torch-tb-profiler>=0.4.3",
    "transformers>=4.57.3",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
train = "clickbait_classifier.train:app"
preprocess = "clickbait_classifier.data:app"
model = "clickbait_classifier.model:app"
