[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "clickbait_classifier"
version = "0.1.0"
description = "A clickbait detection classifier using transformers"
authors = [
  { name = "Julia Melina Jones Borgund" },
  { name = "Kaja Hovinbøle" },
  { name = "Poul Guo Skov" },
  { name = "Yannick Brot Christensen" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-cloud-storage>=3.8.0",
    "hydra-core>=1.3.2",
    "invoke>=2.2.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.0.0",
    "pytorch-lightning>=2.6.0",
    "torch>=2.9.1",
    "torch-tb-profiler>=0.4.3",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.coverage.run]
omit = [
  "tests/*",
  "*/site-packages/*",
  "*/_remote_module_non_scriptable.py"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
train = "clickbait_classifier.train:app"
preprocess = "clickbait_classifier.data:app"
model = "clickbait_classifier.model:app"
evaluate = "clickbait_classifier.evaluate:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["clickbait_classifier*"]
